Set vnc to use controller virtual_ip
The address for the vnc proxy is incorrectly configured in the nova
configuration file.
The correct IP address is the Public Virtual IP address of the
controller node as created by:
    I9649ee74ebaf62b6b929b28243a07c789a08867c

The nova image_element nova.conf already has:
  novncproxy_base_url=http://{{nova.public_ip}}:6080/vnc_auto.html
but nothing was setting nova.public_ip - until now

Closes-Bug: #1332554
Change-Id: I41214834511680170393dd4325b510f549373141

--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -9,6 +9,7 @@ resources:
           compute_libvirt_type: { get_input: nova_compute_libvirt_type }
           db: {get_input: nova_dsn}
           host: {get_input: nova_api_host}
+          public_ip: {get_input: nova_public_ip}
           service-password: {get_input: nova_password}
         ceilometer:
           db: {get_input: ceilometer_dsn}
