--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -136,6 +136,8 @@ parameters:
     type: string
   NovaDSN:
     type: string
+  NovaPublicIP:
+    type: string
   NeutronDSN:
     type: string
   NeutronBridgeMappings:
@@ -194,6 +196,7 @@ resources:
         nova_compute_driver: {get_param: NovaComputeDriver}
         nova_compute_libvirt_type: {get_param: NovaComputeLibvirtType}
         nova_dsn: {get_param: NovaDSN}
+        nova_public_ip: {get_param: NovaPublicIP}
         nova_api_host: {get_param: NovaApiHost}
         nova_password: {get_param: NovaPassword}
         ceilometer_dsn: {get_param: CeilometerDSN}
