--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -328,6 +328,7 @@ resources:
             - - mysql://nova:unset@
               - &compute_database_host {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
               - /nova
+        NovaPublicIP: {get_attr: [PublicVirtualIP, fixed_ips, 0, ip_address]}
         CeilometerDSN:
           Fn::Join:
             - ''
