Set the MySQL root password
Set the MySQL root password to a random string
for the undercloud and overcloud

Change-Id: I6d38ca82c77a4aa8f58089c50aa5bf320ec0ecc6

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -295,6 +295,10 @@ resources:
     type: OS::Heat::RandomString
     properties:
       length: 10
+  MysqlRootPassword:
+    type: OS::Heat::RandomString
+    properties:
+      length: 10
   PublicVirtualIP:
     type: OS::Neutron::Port
     properties:
@@ -482,6 +486,7 @@ resources:
         mysql:
           innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
           local_bind: true
+          root-password: {get_resource: MysqlRootPassword}
           nodes:
             Merge::Map:
               controller0:
