--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -188,6 +188,10 @@ resources:
       length: 20
       salt:
         get_param: RabbitCookieSalt
+  MysqlRootPassword:
+    type: OS::Heat::RandomString
+    properties:
+      length: 10
   undercloudConfig:
     type: OS::Heat::StructuredConfig
     properties:
@@ -270,6 +274,7 @@ resources:
           signing_certificate: {get_param: KeystoneSigningCertificate}
         mysql:
           innodb_buffer_pool_size: {get_param: MysqlInnodbBufferPoolSize}
+          root-password: {get_resource: MysqlRootPassword}
         neutron:
           host: 127.0.0.1
           ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
