--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -134,7 +134,18 @@ parameters:
     type: string
   NeutronPublicInterfaceIP:
     default: ''
-    description: A custom IP address to put onto the NeutronPublicInterface.
+    description: |
+      A custom IP address to put onto the NeutronPublicInterface bridge.
+      See also NeutronPublicInterfaceTagIP for adding a VLAN tagging IP.
+      NeutronPublicInterfaceIP is deprecated in the context of deploying
+      underclouds - its only needed for the seed bootstrap process.
+    type: string
+  NeutronPublicInterfaceTag:
+    default: ''
+    description: |
+      VLAN tag for creating a public VLAN. The tag will be used to
+      create an access port on the exterior bridge, and that port will be
+      given the IP address returned by neutron from the public network.
     type: string
   NeutronPublicInterfaceRawDevice:
     default: ''
@@ -280,6 +291,8 @@ resources:
               get_param: NeutronPublicInterfaceRawDevice
             public_interface_route:
               get_param: NeutronPublicInterfaceDefaultRoute
+            public_interface_tag:
+              get_param: NeutronPublicInterfaceTag
             physical_bridge: br-ctlplane
             physical_network: ctlplane
             network_vlan_ranges: ctlplane
