Specify the network for nodes
Without this, when there are multiple admin networks (e.g. a VLAN)
Nova will refuse to guess and we'll fail to deploy.

Change-Id: Id1dca43ef287fda2adcfdf5b5d30145b055dbe76

--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -177,6 +177,8 @@ Resources:
         Ref: ImageUpdatePolicy
       flavor: {Ref: OvercloudComputeFlavor}
       key_name: {Ref: KeyName}
+      networks:
+        - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
   NovaCompute0Deploy:
     DependsOn: [controller0Deployment]
