--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -528,6 +528,8 @@ Resources:
         Ref: OvercloudControlFlavor
       key_name:
         Ref: KeyName
+      networks:
+        - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
   controller0AllNodesConfig:
     Type: OS::Heat::StructuredDeployment
