--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -305,6 +305,8 @@ Resources:
         Ref: KeyName
       image_update_policy:
         Ref: ImageUpdatePolicy
+      networks:
+        - network: ctlplane
       user_data_format: SOFTWARE_CONFIG
   99_undercloudDeployment:
     Type: OS::Heat::StructuredDeployment
