add Horizon caches backend definition (memcached)
This change adds into the overcloud-source template a structure
name horizon.caches meant to define the Horizon caches backend.
It defaults to using memcached and provides a list of the
memcached nodes in horizon.caches.memcached.nodes

Related to blueprint tripleo-icehouse-ha-production-configuration

Change-Id: I728e05926f2de0e867fb8e8c74c63947da7d987a

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -392,6 +392,13 @@ Resources:
           watch_server_url: {get_input: heat.watch_server_url}
           metadata_server_url: {get_input: heat.metadata_server_url}
           waitcondition_server_url: {get_input: heat.waitcondition_server_url}
+        horizon:
+          caches:
+            memcached:
+              nodes:
+                Merge::Map:
+                  controller0:
+                    {"Fn::Select": [ name, {"Fn::GetAtt": [controller0, show]} ] }
         keystone:
           db: mysql://keystone:unset@localhost/keystone
           host:
