merge.py --hot to process and generate HOT
This adds a --hot flag to merge.py which will assume source templates
are in the HOT format, and generate a HOT template artifact.

Tests have also been ported to HOT, along with some minor corrections
to the existing tests to make the source and result templates valid
heat templates.

Partial-Blueprint: tripleo-juno-remove-mergepy

Change-Id: If18ff79f89456123c884a1ab2f910ce4cc9a6e0b

--- a/examples/source_lib_result.yaml
+++ b/examples/source_lib_result.yaml
@@ -1,9 +1,9 @@
 Description: examples/source.yaml
 HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
-  Default: my_image
-  SourceImage: null
-  Type: String
+  SourceImage:
+    Default: my_image
+    Type: String
 Resources:
   A:
     Properties:
