--- a/examples/source.yaml
+++ b/examples/source.yaml
@@ -1,7 +1,8 @@
+HeatTemplateFormatVersion: '2012-12-12'
 Parameters:
   SourceImage:
-  Type: String
-  Default: my_image
+    Type: String
+    Default: my_image
 Resources:
   A:
     Type: OS::Nova::Server
