Change overcloud to use VIP for MySQL
This change sets applications to utilize the VIP address for database
connectivity and sets HAProxy in between the applications and MySQL.

Depends upon tripleo-image-elements changes:
    Ia6f26305f8e744e4ff938dff85de1193183ecd8f
    Iac1274cc52014f25887d696261b32146afc926dd
    I5af70abb96021146c098f788db349808d806a348

Related to blueprint tripleo-icehouse-ha-production-configuration

Change-Id: Ia9d6ed2771f756d2a97ae5df7ed737a062a59cf2

--- a/block-storage-nfs.yaml
+++ b/block-storage-nfs.yaml
@@ -52,7 +52,7 @@ resources:
       keystone:
         host: {get_attr: [controller0, networks, ctlplane, 0]}
       cinder:
-        db: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [controller0, networks, ctlplane, 0]} , '/cinder']]}
+        db: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]} , '/cinder']]}
         volume_size_mb: '5000'
         service-password:
           get_param: CinderPassword
