--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -30,7 +30,7 @@ resources:
       config: {get_resource: BlockStorageConfig}
       input_values:
         controller_host: {get_attr: [controller0, networks, ctlplane, 0]}
-        cinder_dsn: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [controller0, networks, ctlplane, 0]} , '/cinder']]}
+        cinder_dsn: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]} , '/cinder']]}
         neutron_local_ip: {get_attr: [BlockStorage0 , networks, ctlplane, 0]}
       signal_transport: NO_SIGNAL
   BlockStorageConfig:
