use ControlVirtualInterface for keepalived VRRP
Change keepalived.keepalive_interface so that it uses the actual
ControlVirtualInterface (bridge) for VRRP rather than the bridged
interface (NeutronPublicInterface).

Fixes the issue which caused keepalived to bring up the VIP on
all control nodes.

Change-Id: Ifc484d6a6086d9872210aa576f21d326f60b7d35

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -466,7 +466,7 @@ Resources:
               - {server: {Ref: NtpServer}, fudge: "stratum 0"}
         keepalived:
           keepalive_interface:
-            Ref: NeutronPublicInterface
+            Ref: ControlVirtualInterface
           priority: 101
         virtual_ips:
             -
