make glance.host point to controller_virtual_ip
Previously glance.host was pointing to the local controller_host
which would have requests to glance from other services to fail
if the local glance daemon was unavailable.

Change-Id: Ifd4f4b12cd51e23313826288797cc00ba3cd1754

--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -367,7 +367,7 @@ Resources:
           backend: swift
           db: mysql://glance:unset@localhost/glance
           host:
-            get_input: controller_host
+            get_input: controller_virtual_ip
           port:
             Ref: GlancePort
           protocol:
