expose glance_port,protocol as glance.port,protocol
These values are available in metadata with underscores but
they are accessed by nova with dots.
Make them available with dots.

Required by: Idccc0d60c9f6b17a853c6de1bbea64bfc7e028b2
Change-Id: I5fe952f850339465de128e56e45c9bbda011ce7f

--- a/nova-compute-config.yaml
+++ b/nova-compute-config.yaml
@@ -21,6 +21,8 @@ Resources:
           readonly_user_password: {get_input: snmpd_readonly_user_password}
         glance:
           host: {get_input: glance_host}
+          port: {get_input: glance_port}
+          protocol: {get_input: glance_protocol}
         keystone:
           host: {get_input: keystone_host}
         neutron:
