--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -22,6 +22,7 @@ Resources:
         {Ref: BlockStorageImage}
       flavor: {Ref: OvercloudBlockStorageFlavor}
       key_name: {Ref: KeyName}
+      user_data_format: SOFTWARE_CONFIG
   BlockStorage0Deployment:
     Type: OS::Heat::StructuredDeployment
     Properties:
